ollama/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ollama
  namespace: ollama
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`ollama.mizar.scalar.cloud`)
      middlewares:
        - name: home-networks
          namespace: default
      priority: 10
      services:
        - name: ollama
          kind: Service
          namespace: ollama
          port: http
  tls:
    secretName: ollama-tls
